if (WITH_MPI)
    add_executable(test_repartition test_repartition.cpp)
    target_link_libraries(test_repartition raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBSRSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_repartition)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_repartition)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 3 ${HOST} ./test_repartition)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 6 ${HOST} ./test_repartition)
    
    if (WITH_PTSCOTCH)
        add_executable(test_ptscotch test_ptscotch.cpp)
        target_link_libraries(test_ptscotch raptor ${MPI_LIBRARIES} googletest pthread )
        add_test(PTScotchTest ${MPIRUN} -n 1 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest ${MPIRUN} -n 2 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest ${MPIRUN} -n 3 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest ${MPIRUN} -n 6 ${HOST} ./test_ptscotch)
    endif()

    if (WITH_PARMETIS)
        add_executable(test_parmetis test_parmetis.cpp)
        target_link_libraries(test_parmetis raptor ${MPI_LIBRARIES} googletest pthread )
        add_test(ParMetisTest ${MPIRUN} -n 1 ${HOST} ./test_parmetis)
        add_test(ParMetisTest ${MPIRUN} -n 2 ${HOST} ./test_parmetis)
        add_test(ParMetisTest ${MPIRUN} -n 3 ${HOST} ./test_parmetis)
        add_test(ParMetisTest ${MPIRUN} -n 6 ${HOST} ./test_parmetis)
    endif()
endif()
